--- a/index.html
+++ b/index.html
@@ -1,60 +1,167 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>resume</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+    <base target="_blank">
   </head>
   <body>
-    <div id='wrapper'>
-    <header>
-      <div class="logo">
-      <div class='picture'><img src='image/IMG_5734.jpg' alt="foto" width="140" height="140"></div>
-        <div class="name">
-          <h3> SIARHEI BARANENKAU</h3>
+    <div id="wrapper">
+      <header>
+        <div class="logo">
+          <div class="picture">
+            <img src="image/IMG_5734.jpg" alt="foto" width="140" height="140" />
+          </div>
+          <div class="name">
+            <h3>SIARHEI BARANENKAU</h3>
+          </div>
         </div>
+      </header>
+      <main>
+        <div class="contact">
+          <h4>Contact Info</h4>
+          <a href="https://t.me/cupora" title="Telegram"
+            ><img
+              width="25px"
+              heigth="30px"
+              src="https://cdn.svgporn.com/logos/telegram.svg"
+          /></a>
+          <a href="https://discord.gg/cup0ra" target="blank"
+            ><img
+              src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/discord.svg"
+              alt="cup0ra"
+              height="25"
+              width="40"
+          /></a>
+          <a
+            href="www.linkedin.com/in/siarhei-baranenkau-898bab1b2"
+            title="Linkedin"
+            ><img
+              width="25px"
+              heigth="30px"
+              src="https://cdn.svgporn.com/logos/linkedin-icon.svg"
+          /></a>
+        </div>
+        <div class="summary">
+          <h4>Summary</h4>
+          <p>
+            I want to change my profession and become a front-end developer. I
+            am responsible, easy to learn, I have a desire to develop by
+            profession. I like to create something new. A constant desire to
+            learn new technologies and tools.
+          </p>
+        </div>
+        <div class="skills">
+          <h4>Skills:</h4>
+          <ul>
+            <li>Responsive web-development:  <strong>HTML5, CSS/SCSS</strong>;</li>
+            <li>Programming languages: <strong>JavaScript, Typescript</strong>;</li>
+            <li>
+              SPA development using <strong>React, Angular (in process of studying now)</strong>;
+            </li>
+            <li>
+              Technologies and tools: <strong>Redux, Firebase, Git, GitHub, Webpack,
+                Eslint, Prettier, VSCode, Material-ui, Ant Design;</strong> 
+            </li>
+            <li>English: <strong>A2</strong>;</li>
+          </ul>
+        </div>
+        <div class="education">
+          <h4>Education</h4>
+          <ul>
+            <li>2008 - Minsk Institute of Management - management</li>
+            <li>
+              2004 - College of Industry and Education - organization and
+              production management
+            </li>
+          </ul>
+        </div>
+        <div class='courses'>
+          <h4>Courses</h4>
+          <ul>
+            <li><a href="https://app.rs.school/certificate/juhjh7es">The Rolling Scopes School, JS/FE 2020 Q3 (JAVASCRIPT)</a></li>
+            <li><a href="https://app.rs.school/certificate/4lt1w62q">The Rolling Scopes School, RSS React 2020 Q3</a></li>
+          </ul>
+        </div>
+        
+<div class="portfolio">
+       <h4>Portfolio</h4>
+
+        <details>
+          <summary>
+            <img
+              width="15px"
+              heigth="15px"
+              src="https://cdn.svgporn.com/logos/javascript.svg"
+            />
+            <img
+              width="15px"
+              heigth="15px"
+              src="https://cdn.svgporn.com/logos/typescript-icon.svg"
+            />
+            <strong>Vanilla JS and TS</strong>
+          </summary>
+          <ul>
+            <li>
+              Gem-puzzle <a href="https://github.com/cup0ra/gem-puzzle"
+                >repository</a
+              > <a href="https://cup0ra-gem-puzzle.netlify.app/">deploy</a>
+            </li>
+            <li>
+              Rs-css <a href="https://github.com/cup0ra/rs-css"
+                >repository</a
+              > <a href="https://cup0ra-rs-css.netlify.app/">deploy</a>
+            </li>
+            <li>
+              Fancy-weather <a href="https://github.com/cup0ra/fancy-weather"
+                >repository</a
+              > <a href="https://cup0ra-fancy-weather.netlify.app/">deploy</a>
+            </li>
+            <li>
+              Momentum <a href="https://github.com/cup0ra/momentum"
+                >repository</a
+              > <a href="https://cup0ra-momentum.netlify.app/">deploy</a>
+            </li>
+            <li>
+              Virtual-keyboard <a href="https://github.com/cup0ra/virtual-keyboard"
+                >repository</a
+              > <a href="https://cup0ra-virtual-keyboard.netlify.app/">deploy</a>
+            </li>
+            <li>
+              Calculator <a href="https://github.com/cup0ra/calculator"
+                >repository</a
+              > <a href="https://cup0ra-calculator.netlify.app/">deploy</a>
+            </li>
+            <li>
+              Rslang  (teamwork) <a href="https://github.com/cup0ra/rslang"
+                >repository</a
+              > <a href="https://rslang-team52-iudinaleksei.netlify.app/">deploy</a>
+            </li>
+          </ul>
+        </details>
+        <details>
+          <summary>
+            <img
+              width="15px"
+              heigth="15px"
+              src="https://cdn.svgporn.com/logos/react.svg"
+            />
+            <strong>React</strong>
+          </summary>
+          <ul>
+            <li>Songbird  <a href="https://github.com/cup0ra/songbird">repository</a>  <a href="https://cup0ra-songbird.netlify.app/">deploy</a></li>
+            <li>Covid-dashboard (teamwork) <a href="https://github.com/cup0ra/covid-dashboard">repository</a>  <a href="https://cup0ra-covid-dashboard.netlify.app/">deploy</a></li>
+            <li>Rsclone-medical-portal (teamwork)  <a href="https://github.com/cup0ra/rsclone">repository</a>  <a href="https://rsclone-medical-portal.netlify.app/">deploy</a></li>
+          </ul>
+        </details>
       </div>
-    </header>
-    <main>
-    <div class="contact"> 
-      <h4>Contact Info</h4>
-        <ul>
-          <li class='phone'>+375297016160</li>
-          <li class='email'>cup0ra@yandex.ru</li>
-          <li class="telegram">@cupora</li>
-        </ul> 
-    </div>
-    <div class="summary">
-     <h4>Summary</h4>
-        <p>I want to change my profession and become a front-end developer. I am responsible, easy to learn, I have a desire to develop by profession. I like to create something new. A constant desire to learn new technologies and tools.</p>
-    </div>
-    <div class="skills">
-      <h4>  Skills:</h4>
-        <ul>
-          <li>HTML </li>
-          <li>CSS </li>
-          <li>JS </li>
-     </ul>
-    </div>
-    <div class="education">
-      <h4>Education</h4> 
-        <ul>
-          <li>2008 - Minsk Institute of Management -
-            management</li>
-          <li>2004 - College of Industry and Education -
-organization and production management</li>
-        </ul>
-    </div>
-    <div class='english'>
-      <h4> English </h4>
-        <p>A1 - Beginner</p>
-    </div>
-    </main>
-    <footer>
+      </main>
+      <footer>
         <p>Minsk 2020</p>
-    </footer>
+      </footer>
     </div>
   </body>
 </html>
